ADDED: HTML CSS index content and style

--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,9 @@
 /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
 :root {
+  --ms_pink-d: #B91450;
+}
+.ms_bg-pink-d{
+  background-color: var(--ms_pink-d);
 }
 
 /*************************************************
